[gd_scene load_steps=27 format=3 uid="uid://c74o2ubgawogb"]

[ext_resource type="Script" path="res://scripts/game/game.gd" id="1_yoos1"]
[ext_resource type="PackedScene" uid="uid://eso260jnknd4" path="res://scenes/army.tscn" id="2_14kbw"]
[ext_resource type="PackedScene" uid="uid://by865efl4iwy" path="res://scenes/ui/popups/game_popup.tscn" id="2_dx3sp"]
[ext_resource type="Script" path="res://scripts/camera/camera.gd" id="2_lblr6"]
[ext_resource type="Script" path="res://scripts/camera/camera_drag.gd" id="3_3p7sw"]
[ext_resource type="PackedScene" uid="uid://cwi4tinm2f73x" path="res://scenes/fortress.tscn" id="3_u3whv"]
[ext_resource type="PackedScene" uid="uid://cppfb8jwghnqt" path="res://scenes/province.tscn" id="4_52jos"]
[ext_resource type="Script" path="res://scripts/camera/camera_zoom.gd" id="4_331yk"]
[ext_resource type="PackedScene" uid="uid://dpgoa2yg5bjcp" path="res://scenes/world_2d.tscn" id="6_5jo7e"]
[ext_resource type="PackedScene" uid="uid://cm37jqeqg77g7" path="res://scenes/ui/player_list/networking_setup_game.tscn" id="6_b2bhm"]
[ext_resource type="PackedScene" uid="uid://btp4jcvpp4jg2" path="res://scenes/ui/component_ui.tscn" id="7_dxau2"]
[ext_resource type="PackedScene" uid="uid://dmt38oflf2sjf" path="res://scenes/ui/player_turn_announcement.tscn" id="8_e0v4f"]
[ext_resource type="PackedScene" uid="uid://db07kg52gllnd" path="res://scenes/ui/popups/army_movement_popup.tscn" id="8_nnt8b"]
[ext_resource type="PackedScene" uid="uid://t615nfcmdn14" path="res://scenes/ui/player_list/player_list.tscn" id="9_pkxqv"]
[ext_resource type="Script" path="res://scripts/ui/color_rect_aspect_ratio.gd" id="10_2dak6"]
[ext_resource type="Script" path="res://scripts/ui/top_bar.gd" id="10_87bnf"]
[ext_resource type="PackedScene" uid="uid://8rs6mtufs60s" path="res://scenes/ui/popups/build_fortress_popup.tscn" id="10_x38iu"]
[ext_resource type="PackedScene" uid="uid://dmta7gru0kbr2" path="res://scenes/ui/popups/recruitment_popup.tscn" id="11_rjf2g"]
[ext_resource type="PackedScene" uid="uid://cfhpg688geojo" path="res://scenes/ui/popups/game_over_popup.tscn" id="16_mxtlx"]
[ext_resource type="PackedScene" uid="uid://bmtb3thxlc0ms" path="res://scenes/ui/chat_interface.tscn" id="20_446nu"]
[ext_resource type="Script" path="res://scripts/ui/interface_tabs.gd" id="20_no4y5"]
[ext_resource type="Script" path="res://scripts/ui/end_turn_interface.gd" id="21_fxgwm"]
[ext_resource type="Script" path="res://scripts/ui/id_button.gd" id="21_l7714"]
[ext_resource type="PackedScene" uid="uid://bsk11sxt73iy4" path="res://scenes/ui/player_list/turn_order_list.tscn" id="22_ufuwj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ioeab"]
bg_color = Color(0.423529, 0.537255, 0.65098, 0.878431)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bh543"]
bg_color = Color(0.423529, 0.537255, 0.65098, 0.878431)

[node name="Game" type="Node" node_paths=PackedStringArray("camera", "game_ui", "component_ui_root", "top_bar", "lobby_list_root", "popups")]
script = ExtResource("1_yoos1")
army_scene = ExtResource("2_14kbw")
fortress_scene = ExtResource("3_u3whv")
province_scene = ExtResource("4_52jos")
world_2d_scene = ExtResource("6_5jo7e")
networking_setup_scene = ExtResource("6_b2bhm")
troop_ui_scene = ExtResource("2_dx3sp")
component_ui_scene = ExtResource("7_dxau2")
player_turn_scene = ExtResource("8_e0v4f")
player_list_scene = ExtResource("9_pkxqv")
popup_scene = ExtResource("2_dx3sp")
army_movement_scene = ExtResource("8_nnt8b")
game_over_scene = ExtResource("16_mxtlx")
build_fortress_scene = ExtResource("10_x38iu")
recruitment_scene = ExtResource("11_rjf2g")
camera = NodePath("Camera")
game_ui = NodePath("UILayer/GameUI")
component_ui_root = NodePath("UILayer/GameUI/ComponentUI")
top_bar = NodePath("UILayer/GameUI/TopBar")
lobby_list_root = NodePath("UILayer/GameUI/RightSide/Content/LobbyList")
popups = NodePath("UILayer/GameUI/Popups")

[node name="WorldLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="Camera" type="Camera2D" parent="."]
script = ExtResource("2_lblr6")
world_margin = Vector2(0.25, 0.25)

[node name="CameraDrag" type="Node" parent="Camera"]
script = ExtResource("3_3p7sw")

[node name="CameraZoom" type="Node" parent="Camera"]
script = ExtResource("4_331yk")

[node name="UILayer" type="CanvasLayer" parent="."]
layer = 2

[node name="GameUI" type="Control" parent="UILayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ComponentUI" type="Control" parent="UILayer/GameUI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TopBar" type="Control" parent="UILayer/GameUI" node_paths=PackedStringArray("_game", "country_color_rect", "country_name_label", "country_money_label", "game_turn_label")]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 0.1
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("10_87bnf")
_game = NodePath("../../..")
country_color_rect = NodePath("HBoxContainer/YourCountry/MarginContainer/HBoxContainer/CountryColor/ColorRect")
country_name_label = NodePath("HBoxContainer/YourCountry/MarginContainer/HBoxContainer/CountryName/Label")
country_money_label = NodePath("HBoxContainer/Money/HBoxContainer/Text")
game_turn_label = NodePath("HBoxContainer/GameTurn/Label")

[node name="BackgroundColor" type="ColorRect" parent="UILayer/GameUI/TopBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.188235, 0.188235, 0.25098, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="UILayer/GameUI/TopBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="YourCountry" type="Control" parent="UILayer/GameUI/TopBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3

[node name="MarginContainer" type="MarginContainer" parent="UILayer/GameUI/TopBar/HBoxContainer/YourCountry"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.075
anchor_top = 0.075
anchor_right = 0.925
anchor_bottom = 0.925
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UILayer/GameUI/TopBar/HBoxContainer/YourCountry/MarginContainer"]
layout_mode = 2

[node name="CountryColor" type="Control" parent="UILayer/GameUI/TopBar/HBoxContainer/YourCountry/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3

[node name="ColorRect" type="ColorRect" parent="UILayer/GameUI/TopBar/HBoxContainer/YourCountry/MarginContainer/HBoxContainer/CountryColor"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.0314592
anchor_right = 1.0
anchor_bottom = 0.968541
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("10_2dak6")
aspect_ratio = 1.66

[node name="Spacing" type="Control" parent="UILayer/GameUI/TopBar/HBoxContainer/YourCountry/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.05

[node name="CountryName" type="Control" parent="UILayer/GameUI/TopBar/HBoxContainer/YourCountry/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.65

[node name="Label" type="Label" parent="UILayer/GameUI/TopBar/HBoxContainer/YourCountry/MarginContainer/HBoxContainer/CountryName"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "One two three four five six seven eight nine ten eleven twelve thirteen fourteen fifteen sixteen seventeen eighteen nineteen twenty"
vertical_alignment = 1
clip_text = true

[node name="Separator" type="Control" parent="UILayer/GameUI/TopBar/HBoxContainer"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="UILayer/GameUI/TopBar/HBoxContainer/Separator"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2

[node name="Money" type="Control" parent="UILayer/GameUI/TopBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="HBoxContainer" type="HBoxContainer" parent="UILayer/GameUI/TopBar/HBoxContainer/Money"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Icon" type="Control" parent="UILayer/GameUI/TopBar/HBoxContainer/Money/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25

[node name="MarginContainer" type="MarginContainer" parent="UILayer/GameUI/TopBar/HBoxContainer/Money/HBoxContainer/Icon"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="UILayer/GameUI/TopBar/HBoxContainer/Money/HBoxContainer/Icon/MarginContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="UILayer/GameUI/TopBar/HBoxContainer/Money/HBoxContainer/Icon/MarginContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.0657895
anchor_right = 1.0
anchor_bottom = 0.934211
script = ExtResource("10_2dak6")

[node name="Label" type="Label" parent="UILayer/GameUI/TopBar/HBoxContainer/Money/HBoxContainer/Icon/MarginContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "$"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Text" type="Label" parent="UILayer/GameUI/TopBar/HBoxContainer/Money/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.75
text = "69420"
vertical_alignment = 1

[node name="Separator2" type="Control" parent="UILayer/GameUI/TopBar/HBoxContainer"]
visible = false
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="UILayer/GameUI/TopBar/HBoxContainer/Separator2"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2

[node name="Spacing" type="Control" parent="UILayer/GameUI/TopBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3

[node name="Separator3" type="Control" parent="UILayer/GameUI/TopBar/HBoxContainer"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="UILayer/GameUI/TopBar/HBoxContainer/Separator3"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2

[node name="GameTurn" type="Control" parent="UILayer/GameUI/TopBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="Label" type="Label" parent="UILayer/GameUI/TopBar/HBoxContainer/GameTurn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Turn 69420"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightSide" type="Control" parent="UILayer/GameUI"]
layout_mode = 1
anchor_left = 0.75
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 0.8
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0

[node name="Tabs" type="Control" parent="UILayer/GameUI/RightSide" node_paths=PackedStringArray("buttons", "corresponding_ui")]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 0.1
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
script = ExtResource("20_no4y5")
buttons = [NodePath("HBoxContainer/TurnOrderTab/TurnOrderButton"), NodePath("HBoxContainer/LobbyTab/LobbyButton")]
corresponding_ui = [NodePath("../Content/TurnOrderList"), NodePath("../Content/LobbyList")]

[node name="HBoxContainer" type="HBoxContainer" parent="UILayer/GameUI/RightSide/Tabs"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TurnOrderTab" type="Control" parent="UILayer/GameUI/RightSide/Tabs/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ColorRect" type="ColorRect" parent="UILayer/GameUI/RightSide/Tabs/HBoxContainer/TurnOrderTab"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.423529, 0.537255, 0.65098, 0.878431)

[node name="TurnOrderButton" type="Button" parent="UILayer/GameUI/RightSide/Tabs/HBoxContainer/TurnOrderTab"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_ioeab")
text = "Turn Order"
script = ExtResource("21_l7714")

[node name="LobbyTab" type="Control" parent="UILayer/GameUI/RightSide/Tabs/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ColorRect" type="ColorRect" parent="UILayer/GameUI/RightSide/Tabs/HBoxContainer/LobbyTab"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.423529, 0.537255, 0.65098, 0.878431)

[node name="LobbyButton" type="Button" parent="UILayer/GameUI/RightSide/Tabs/HBoxContainer/LobbyTab"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_bh543")
text = "Lobby"
script = ExtResource("21_l7714")

[node name="Content" type="Control" parent="UILayer/GameUI/RightSide"]
layout_mode = 1
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.9

[node name="TurnOrderList" type="Control" parent="UILayer/GameUI/RightSide/Content"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TurnOrderList" parent="UILayer/GameUI/RightSide/Content/TurnOrderList" instance=ExtResource("22_ufuwj")]
unique_name_in_owner = true
layout_mode = 1

[node name="LobbyList" type="Control" parent="UILayer/GameUI/RightSide/Content"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerList" parent="UILayer/GameUI/RightSide/Content/LobbyList" instance=ExtResource("9_pkxqv")]
unique_name_in_owner = true
layout_mode = 1
offset_bottom = 107.0
is_shrunk = true

[node name="ChatInterface" parent="UILayer/GameUI" instance=ExtResource("20_446nu")]
unique_name_in_owner = true
layout_mode = 1

[node name="EndTurnInterface" type="Control" parent="UILayer/GameUI" node_paths=PackedStringArray("_game")]
layout_mode = 1
anchor_left = 0.8
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("21_fxgwm")
_game = NodePath("../../..")

[node name="ColorRect" type="ColorRect" parent="UILayer/GameUI/EndTurnInterface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.25098)

[node name="MarginContainer" type="MarginContainer" parent="UILayer/GameUI/EndTurnInterface"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8

[node name="EndTurn" type="Button" parent="UILayer/GameUI/EndTurnInterface/MarginContainer"]
layout_mode = 2
text = "End Turn"

[node name="Popups" type="Control" parent="UILayer/GameUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[connection signal="pressed" from="UILayer/GameUI/EndTurnInterface/MarginContainer/EndTurn" to="." method="_on_end_turn_pressed"]
